# spa-sqladmin

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  TOOD.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml  test-suite.yml
docs/: USAGE.md  authentication.md  configurations.md  index.md  model_convertors.md  working_with_files.md  writing_custom_views.md
docs/api_reference/: application.md  authentication.md  base_view.md  model_view.md
docs/cookbook/: deployment_with_https.md  display_custom_attributes.md  multiple_databases.md  optimize_relationship_loading.md  using_wysiwyg.md
example/: README.md  admin.py  app.py  db.py  models.py  pyproject.toml  seed.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: globals.css  main.tsx  routes.tsx  vite-env.d.ts
frontend/src/components/: theme-provider.tsx
frontend/src/hooks/: use-detail.ts  (+3 more)
spa_sqladmin/: __init__.py  _menu.py  _queries.py  ajax.py  api.py  application.py  authentication.py  fields.py  filters.py  formatters.py  forms.py  helpers.py  models.py  pretty_export.py
tests/: test_ajax.py  test_application.py  test_authentication.py  test_base_view.py  test_fields.py  test_file_upload.py  test_filters.py  test_helpers.py  test_menu.py  test_models.py  test_models_action.py  test_pagination.py  test_pretty_export.py
tests/test_forms/: test_forms.py  test_multi_pk_forms.py
tests/test_integrations/: test_sqlalchemy_utils.py  test_sqlmodel.py
tests/test_views/: test_multi_pk_view.py  test_view_async.py  test_view_sync.py
(+40 files in other folders)
